{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 334,
  "lineage": "ddbb3d79-6804-849e-ac2c-d291271bbc83",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059ca227f56a4f47c",
            "domain": "vpc",
            "id": "eipalloc-059ca227f56a4f47c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-233-154-68.compute-1.amazonaws.com",
            "public_ip": "34.233.154.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776602941589:internet-gateway/igw-0b8c9153749cf2d60",
            "id": "igw-0b8c9153749cf2d60",
            "owner_id": "776602941589",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0d3d2c1d2d89a7909"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059ca227f56a4f47c",
            "connectivity_type": "public",
            "id": "nat-040c210e66d5c540c",
            "network_interface_id": "eni-025bf3252a1d03a8f",
            "private_ip": "10.0.90.88",
            "public_ip": "34.233.154.68",
            "subnet_id": "subnet-056cd6286339f4834",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c3c5f08490f0400e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-040c210e66d5c540c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c3c5f08490f0400e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b8c9153749cf2d60",
            "id": "r-rtb-07ea10031c1bf0bba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07ea10031c1bf0bba",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776602941589:route-table/rtb-0c3c5f08490f0400e",
            "id": "rtb-0c3c5f08490f0400e",
            "owner_id": "776602941589",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3d2c1d2d89a7909"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776602941589:route-table/rtb-07ea10031c1bf0bba",
            "id": "rtb-07ea10031c1bf0bba",
            "owner_id": "776602941589",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3d2c1d2d89a7909"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e47c14ee1f30040",
            "route_table_id": "rtb-0c3c5f08490f0400e",
            "subnet_id": "subnet-0ff2c960a33caa53f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route.private_nat_gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6f21450848e1a0a",
            "route_table_id": "rtb-0c3c5f08490f0400e",
            "subnet_id": "subnet-05c4174ab17470d14"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route.private_nat_gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08dbff171525f59dd",
            "route_table_id": "rtb-07ea10031c1bf0bba",
            "subnet_id": "subnet-056cd6286339f4834"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route.public_internet_gateway",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08dbff171525f59dd",
            "route_table_id": "rtb-07ea10031c1bf0bba",
            "subnet_id": "subnet-056cd6286339f4834"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route.public_internet_gateway",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776602941589:subnet/subnet-0ff2c960a33caa53f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff2c960a33caa53f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "776602941589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "private",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d3d2c1d2d89a7909"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776602941589:subnet/subnet-05c4174ab17470d14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c4174ab17470d14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "776602941589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "private",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d3d2c1d2d89a7909"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776602941589:subnet/subnet-056cd6286339f4834",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056cd6286339f4834",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776602941589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d3d2c1d2d89a7909"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776602941589:vpc/vpc-0d3d2c1d2d89a7909",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b86e71838590cc29",
            "default_route_table_id": "rtb-00fe4c06fad35e683",
            "default_security_group_id": "sg-0241e8e402efdfbaa",
            "dhcp_options_id": "dopt-0cb0fc045fd695309",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d3d2c1d2d89a7909",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00fe4c06fad35e683",
            "owner_id": "776602941589",
            "tags": {
              "Name": "vpc-1691361401"
            },
            "tags_all": {
              "Name": "vpc-1691361401"
            }
          },
          "dependencies": [
            "data.external.vpc_name"
          ]
        }
      ]
    }
  ]
}